moved file reads to spark

--- a/ExploreSingleFile.ipynb
+++ b/ExploreSingleFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "82912d21",
    "metadata": {},
    "outputs": [],
@@ -15,472 +15,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4eeb670b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from etl.datareader import read_match_file\n",
-    "\n",
-    "match_file_full_path = \"/home/abhay/work/dream11/raw_historical_data/1153691.json\"\n",
-    "df = spark.createDataFrame(read_match_file(match_file_full_path))\n",
-    "df.toPandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b44826b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob, os\n",
-    "raw_data_prefix = '/home/abhay/work/dream11/raw_historical_data'\n",
-    "os.chdir(raw_data_prefix)\n",
-    "match_file_list = []\n",
-    "for file in glob.glob(\"*.json\"):\n",
-    "    full_match_file = raw_data_prefix + \"/\" + file\n",
-    "    match_file_list.append(full_match_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "354bbdf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from etl.datareader import read_match_file\n",
-    "\n",
-    "for i in range(len(match_file_list[:10])):\n",
-    "    full_match_file = match_file_list[i]\n",
-    "    df = spark.createDataFrame(read_match_file(match_file_full_path))\n",
-    "    print(\"finished reading file %s, %i out of %i\"%(full_match_file, i, 100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a9fce6ab",
+   "execution_count": 13,
+   "id": "b9654c29",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/02/08 22:34:33 WARN Utils: Your hostname, Chaturvedi_PC resolves to a loopback address: 127.0.1.1; using 172.24.65.197 instead (on interface eth0)\n",
-      "23/02/08 22:34:33 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "23/02/08 22:34:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "                                                                                \r"
      ]
     }
    ],
-   "source": [
-    "from etl.datawriter import create_match_file_list, write_match_file\n",
-    "match_file_list = create_match_file_list(raw_data_prefix = '/home/abhay/work/dream11/raw_historical_data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d9665a61",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df = spark.read.parquet('processed_output/delivery_parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "348a8b1d",
+   "execution_count": 14,
+   "id": "960958f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.registerTempTable(\"matches\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "81eb00dd",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>innings_number</th>\n",
-       "      <th>batter_name</th>\n",
-       "      <th>batter_team</th>\n",
-       "      <th>batter_id</th>\n",
-       "      <th>bowler_name</th>\n",
-       "      <th>bowler_team</th>\n",
-       "      <th>bowler_id</th>\n",
-       "      <th>batter_runs</th>\n",
-       "      <th>extra_runs</th>\n",
-       "      <th>total_runs</th>\n",
-       "      <th>...</th>\n",
-       "      <th>city</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>total_overs</th>\n",
-       "      <th>season</th>\n",
-       "      <th>toss</th>\n",
-       "      <th>team_1</th>\n",
-       "      <th>team_2</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>dt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Shaheen Shah Afridi</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>45a7e761</td>\n",
-       "      <td>Mehedi Hasan Miraz</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>c58b0108</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chattogram</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021/22</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Shaheen Shah Afridi</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>45a7e761</td>\n",
-       "      <td>Mehedi Hasan Miraz</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>c58b0108</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chattogram</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021/22</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Shaheen Shah Afridi</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>45a7e761</td>\n",
-       "      <td>Mehedi Hasan Miraz</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>c58b0108</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chattogram</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021/22</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Shaheen Shah Afridi</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>45a7e761</td>\n",
-       "      <td>Mehedi Hasan Miraz</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>c58b0108</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chattogram</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021/22</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Faheem Ashraf</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>bd4ea627</td>\n",
-       "      <td>Taijul Islam</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>9d1d34bd</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chattogram</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021/22</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>Pakistan</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9228</th>\n",
-       "      <td>1</td>\n",
-       "      <td>KJ McClure</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>4c895bc1</td>\n",
-       "      <td>L Delport</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>2c1438ef</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2020/21</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9229</th>\n",
-       "      <td>1</td>\n",
-       "      <td>CJ Bowes</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>45df0e72</td>\n",
-       "      <td>L Delport</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>2c1438ef</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2020/21</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9230</th>\n",
-       "      <td>1</td>\n",
-       "      <td>CJ Bowes</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>45df0e72</td>\n",
-       "      <td>WER Somerville</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>74a1c1e3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2020/21</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9231</th>\n",
-       "      <td>1</td>\n",
-       "      <td>CJ Bowes</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>45df0e72</td>\n",
-       "      <td>WER Somerville</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>74a1c1e3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2020/21</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9232</th>\n",
-       "      <td>1</td>\n",
-       "      <td>KJ McClure</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>4c895bc1</td>\n",
-       "      <td>WER Somerville</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>74a1c1e3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2020/21</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>Auckland</td>\n",
-       "      <td>Canterbury</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9233 rows × 34 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     innings_number          batter_name batter_team batter_id  \\\n",
-       "0                 1  Shaheen Shah Afridi    Pakistan  45a7e761   \n",
-       "1                 1  Shaheen Shah Afridi    Pakistan  45a7e761   \n",
-       "2                 1  Shaheen Shah Afridi    Pakistan  45a7e761   \n",
-       "3                 1  Shaheen Shah Afridi    Pakistan  45a7e761   \n",
-       "4                 1        Faheem Ashraf    Pakistan  bd4ea627   \n",
-       "...             ...                  ...         ...       ...   \n",
-       "9228              1           KJ McClure  Canterbury  4c895bc1   \n",
-       "9229              1             CJ Bowes  Canterbury  45df0e72   \n",
-       "9230              1             CJ Bowes  Canterbury  45df0e72   \n",
-       "9231              1             CJ Bowes  Canterbury  45df0e72   \n",
-       "9232              1           KJ McClure  Canterbury  4c895bc1   \n",
-       "\n",
-       "             bowler_name bowler_team bowler_id  batter_runs  extra_runs  \\\n",
-       "0     Mehedi Hasan Miraz  Bangladesh  c58b0108            0           0   \n",
-       "1     Mehedi Hasan Miraz  Bangladesh  c58b0108            0           0   \n",
-       "2     Mehedi Hasan Miraz  Bangladesh  c58b0108            0           0   \n",
-       "3     Mehedi Hasan Miraz  Bangladesh  c58b0108            0           0   \n",
-       "4           Taijul Islam  Bangladesh  9d1d34bd            6           0   \n",
-       "...                  ...         ...       ...          ...         ...   \n",
-       "9228           L Delport    Auckland  2c1438ef            1           0   \n",
-       "9229           L Delport    Auckland  2c1438ef            1           0   \n",
-       "9230      WER Somerville    Auckland  74a1c1e3            6           0   \n",
-       "9231      WER Somerville    Auckland  74a1c1e3            1           0   \n",
-       "9232      WER Somerville    Auckland  74a1c1e3            1           0   \n",
-       "\n",
-       "      total_runs  ...        city  gender  total_overs   season        toss  \\\n",
-       "0              0  ...  Chattogram    male            0  2021/22  Bangladesh   \n",
-       "1              0  ...  Chattogram    male            0  2021/22  Bangladesh   \n",
-       "2              0  ...  Chattogram    male            0  2021/22  Bangladesh   \n",
-       "3              0  ...  Chattogram    male            0  2021/22  Bangladesh   \n",
-       "4              6  ...  Chattogram    male            0  2021/22  Bangladesh   \n",
-       "...          ...  ...         ...     ...          ...      ...         ...   \n",
-       "9228           1  ...    Auckland    male           20  2020/21  Canterbury   \n",
-       "9229           1  ...    Auckland    male           20  2020/21  Canterbury   \n",
-       "9230           6  ...    Auckland    male           20  2020/21  Canterbury   \n",
-       "9231           1  ...    Auckland    male           20  2020/21  Canterbury   \n",
-       "9232           1  ...    Auckland    male           20  2020/21  Canterbury   \n",
-       "\n",
-       "          team_1      team_2  year month  dt  \n",
-       "0     Bangladesh    Pakistan  2021    11  26  \n",
-       "1     Bangladesh    Pakistan  2021    11  26  \n",
-       "2     Bangladesh    Pakistan  2021    11  26  \n",
-       "3     Bangladesh    Pakistan  2021    11  26  \n",
-       "4     Bangladesh    Pakistan  2021    11  26  \n",
-       "...          ...         ...   ...   ...  ..  \n",
-       "9228    Auckland  Canterbury  2021     1   3  \n",
-       "9229    Auckland  Canterbury  2021     1   3  \n",
-       "9230    Auckland  Canterbury  2021     1   3  \n",
-       "9231    Auckland  Canterbury  2021     1   3  \n",
-       "9232    Auckland  Canterbury  2021     1   3  \n",
-       "\n",
-       "[9233 rows x 34 columns]"
+       "14036"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.toPandas()"
+    "match_ids = set([row.match_id for row in spark.sql(\"Select distinct match_id from matches\").collect()])\n",
+    "len(match_ids)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d51bcb3",
+   "id": "77340839",
    "metadata": {},
    "outputs": [],
    "source": []
