Addin druid feature store poc

--- a/ExploreSingleFile.ipynb
+++ b/ExploreSingleFile.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "82912d21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/02/10 19:03:57 WARN Utils: Your hostname, Chaturvedi_PC resolves to a loopback address: 127.0.1.1; using 172.27.77.242 instead (on interface eth0)\n",
+      "23/02/10 19:03:57 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/02/10 19:03:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -15,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "b9654c29",
    "metadata": {},
    "outputs": [
@@ -33,47 +46,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "960958f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.registerTempTable(\"matches\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "81eb00dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "23/02/10 19:04:13 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "df.registerTempTable(\"matches\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "81eb00dd",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "14036"
+       "['innings_number',\n",
+       " 'batter_name',\n",
+       " 'batter_team',\n",
+       " 'batter_id',\n",
+       " 'bowler_name',\n",
+       " 'bowler_team',\n",
+       " 'bowler_id',\n",
+       " 'batter_runs',\n",
+       " 'extra_runs',\n",
+       " 'total_runs',\n",
+       " 'over',\n",
+       " 'ball',\n",
+       " 'is_wicket',\n",
+       " 'wicket_player_name',\n",
+       " 'wicket_player_id',\n",
+       " 'wicket_fielder_name',\n",
+       " 'wicket_fielder_id',\n",
+       " 'wicket_kind',\n",
+       " 'match_id',\n",
+       " 'event_name',\n",
+       " 'match_type',\n",
+       " 'team_type',\n",
+       " 'venue_name',\n",
+       " 'city',\n",
+       " 'gender',\n",
+       " 'total_overs',\n",
+       " 'season',\n",
+       " 'toss',\n",
+       " 'team_1',\n",
+       " 'team_2',\n",
+       " 'start_date']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match_ids = set([row.match_id for row in spark.sql(\"Select distinct match_id from matches\").collect()])\n",
-    "len(match_ids)"
+    "spark.sql(\"select * from matches\").columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77340839",
+   "id": "60eaa253",
    "metadata": {},
    "outputs": [],
    "source": []
