Added template queries for stats

--- a/DruidConnectionTest.ipynb
+++ b/DruidConnectionTest.ipynb
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "343b2a17",
+   "id": "8de8560c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "with base_data as (\n",
     "  select * from delivery_records WHERE __time > '$start_date' AND __time < '$end_date'  AND \"match_type\" = 'T20' $additional_filters\n",
     "), dismissals as (\n",
-    "  select sum(\"is_wicket\") as dismissal_count from base_data WHERE \"bowler_id\" = '$bowler_id'\n",
+    "  select sum(\"wicket_sum\") as dismissal_count from base_data WHERE \"bowler_id\" = '$bowler_id'\n",
     ")\n",
     "SELECT\n",
     "  sum(\"delivery_count\")*1.0/(SELECT sum(dismissal_count) from dismissals) as strike_rate,\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "119fafbc",
+   "id": "ec05960f",
    "metadata": {},
    "outputs": [
     {
@@ -146,20 +146,12 @@
      ]
     }
    ],
-   "source": [
-    "additional_filters = ' and ' +  get_adversary_filter(['ba607b88'])\n",
-    "query = bowling_stats_template.substitute(\n",
-    "    start_date = '2017-01-01',\n",
-    "    end_date='2023-01-01',\n",
-    "    additional_filters=additional_filters,\n",
-    "    bowler_id='495d42a5')\n",
-    "print(query)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d3adc226",
+   "id": "843400b2",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "028957d7",
+   "id": "c193b5e1",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1113fcdd",
+   "id": "a1c8b98f",
    "metadata": {},
    "outputs": [],
    "source": []
