--- a/DruidConnectionTest.ipynb
+++ b/DruidConnectionTest.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fa239e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydruid.db import connect\n",
+    "\n",
+    "conn = connect(host='localhost', port=8888, path='/druid/v2/sql/', scheme='http')\n",
+    "curs = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "id": "fd6d5278",
    "metadata": {},
@@ -28,35 +41,8 @@
     "    return 'venue_name=\\'%s\\''%venue_name\n",
     "\n",
     "def get_adversary_filter(bowler_ids: List[str]):\n",
-    "    return 'bowler_id in (%s)'% \",\".join(['\\'%s\\''%bowler_id for bowler_id in bowler_ids])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "deac6684",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "with base_data as (\n",
-      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20'  and bowler_id in ('495d42a5')\n",
-      "), dismissals as (\n",
-      "  select sum(\"is_wicket\") as dismissal_count from base_data WHERE \"wicket_player_id\" = 'ba607b88'\n",
-      ")\n",
-      "SELECT\n",
-      "  sum(\"batter_run_sum\")*100.0/sum(\"delivery_count\") as strike_rate,\n",
-      "  sum(\"batter_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
-      "from base_data\n",
-      "where \"batter_id\" = 'ba607b88'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return 'bowler_id in (%s)'% \",\".join(['\\'%s\\''%bowler_id for bowler_id in bowler_ids])\n",
+    "\n",
     "venue = 'Eden Gardens'\n",
     "additional_filters ='and ' + get_venue_filter(venue)\n",
     "additional_filters = ' and ' +  get_adversary_filter(['495d42a5'])\n",
@@ -83,10 +69,7 @@
     }
    ],
    "source": [
-    "from pydruid.db import connect\n",
     "\n",
-    "conn = connect(host='localhost', port=8888, path='/druid/v2/sql/', scheme='http')\n",
-    "curs = conn.cursor()\n",
     "curs.execute(query)\n",
     "for row in curs:\n",
     "    print(row)"
@@ -94,10 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "8de8560c",
+   "execution_count": 71,
+   "id": "fb8254aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "with base_data as (\n",
+      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20'  and batter_id in ('ba607b88')\n",
+      "), dismissals as (\n",
+      "  select sum(\"wicket_sum\") as dismissal_count from base_data WHERE \"bowler_id\" = '495d42a5'\n",
+      ")\n",
+      "SELECT\n",
+      "  sum(\"delivery_count\")*1.0/(SELECT sum(dismissal_count) from dismissals) as strike_rate,\n",
+      "  sum(\"total_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
+      "from base_data\n",
+      "where \"bowler_id\" = '495d42a5'\n",
+      "\n",
+      "Row(strike_rate=30.0, average=35.0)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "bowling_stats_template = Template(\"\"\"\n",
@@ -118,51 +121,15 @@
     "    return 'venue_name=\\'%s\\''%venue_name\n",
     "\n",
     "def get_adversary_filter(batter_ids: List[str]):\n",
-    "    return 'batter_id in (%s)'% \",\".join(['\\'%s\\''%batter_id for batter_id in batter_ids])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "ec05960f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "with base_data as (\n",
-      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20'  and batter_id in ('ba607b88')\n",
-      "), dismissals as (\n",
-      "  select sum(\"is_wicket\") as dismissal_count from base_data WHERE \"bowler_id\" = '495d42a5'\n",
-      ")\n",
-      "SELECT\n",
-      "  sum(\"delivery_count\")*1.0/(SELECT sum(dismissal_count) from dismissals) as strike_rate,\n",
-      "  sum(\"total_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
-      "from base_data\n",
-      "where \"bowler_id\" = '495d42a5'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "843400b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row(strike_rate=30.0, average=35.0)\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return 'batter_id in (%s)'% \",\".join(['\\'%s\\''%batter_id for batter_id in batter_ids])\n",
+    "\n",
+    "additional_filters = ' and ' +  get_adversary_filter(['ba607b88'])\n",
+    "query = bowling_stats_template.substitute(\n",
+    "    start_date = '2017-01-01',\n",
+    "    end_date='2023-01-01',\n",
+    "    additional_filters=additional_filters,\n",
+    "    bowler_id='495d42a5')\n",
+    "print(query)\n",
     "curs.execute(query)\n",
     "for row in curs:\n",
     "    print(row)"
@@ -170,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c193b5e1",
+   "execution_count": 72,
+   "id": "a0c87168",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +149,7 @@
       "with base_data as (\n",
       "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20' \n",
       ")\n",
-      "SELECT sum(is_wicket) as fielding_dismissals from base_data where \"wicket_fielder_id\"= 'ba607b88'\n",
+      "SELECT sum(wicket_sum) as fielding_dismissals from base_data where \"wicket_fielder_id\"= 'ba607b88'\n",
       "\n",
       "Row(fielding_dismissals=69)\n"
      ]
@@ -193,7 +160,7 @@
     "with base_data as (\n",
     "  select * from delivery_records WHERE __time > '$start_date' AND __time < '$end_date'  AND \"match_type\" = 'T20' $additional_filters\n",
     ")\n",
-    "SELECT sum(is_wicket) as fielding_dismissals from base_data where \"wicket_fielder_id\"= '$fielder_id'\n",
+    "SELECT sum(wicket_sum) as fielding_dismissals from base_data where \"wicket_fielder_id\"= '$fielder_id'\n",
     "\"\"\")\n",
     "additional_filters=''\n",
     "query = fielding_stats_template.substitute(\n",
@@ -210,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c8b98f",
+   "id": "4f226c83",
    "metadata": {},
    "outputs": [],
    "source": []
