removed match counts

--- a/DruidConnectionTest.ipynb
+++ b/DruidConnectionTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa239e3f",
+   "id": "70e86e9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "id": "fd6d5278",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "with base_data as (\n",
+      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20'  and bowler_id in ('495d42a5')\n",
+      "), dismissals as (\n",
+      "  select sum(\"is_wicket\") as dismissal_count from base_data WHERE \"wicket_player_id\" = 'ba607b88'\n",
+      ")\n",
+      "SELECT\n",
+      "  sum(\"batter_run_sum\")*100.0/sum(\"delivery_count\") as strike_rate,\n",
+      "  sum(\"batter_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
+      "from base_data\n",
+      "where \"batter_id\" = 'ba607b88'\n",
+      "\n",
+      "Row(strike_rate=110.0, average=33.0)\n"
+     ]
+    }
+   ],
    "source": [
     "from string import Template\n",
     "from typing import List\n",
@@ -51,24 +71,7 @@
     "    end_date='2023-01-01',\n",
     "    additional_filters=additional_filters,\n",
     "    batter_id='ba607b88')\n",
-    "print(query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "8b5d6516",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row(strike_rate=110.0, average=33.0)\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(query)\n",
     "\n",
     "curs.execute(query)\n",
     "for row in curs:\n",
@@ -78,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "fb8254aa",
+   "id": "c1578265",
    "metadata": {},
    "outputs": [
     {
@@ -137,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "a0c87168",
+   "execution_count": 75,
+   "id": "455364cf",
    "metadata": {},
    "outputs": [
     {
@@ -149,9 +152,9 @@
       "with base_data as (\n",
       "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20' \n",
       ")\n",
-      "SELECT sum(wicket_sum) as fielding_dismissals from base_data where \"wicket_fielder_id\"= 'ba607b88'\n",
+      "SELECT sum(wicket_sum) as fielding_dismissals, count(distinct match_id) as match_count from base_data where \"wicket_fielder_id\"= 'ba607b88'\n",
       "\n",
-      "Row(fielding_dismissals=69)\n"
+      "Row(fielding_dismissals=69, match_count=56)\n"
      ]
     }
    ],
@@ -160,7 +163,7 @@
     "with base_data as (\n",
     "  select * from delivery_records WHERE __time > '$start_date' AND __time < '$end_date'  AND \"match_type\" = 'T20' $additional_filters\n",
     ")\n",
-    "SELECT sum(wicket_sum) as fielding_dismissals from base_data where \"wicket_fielder_id\"= '$fielder_id'\n",
+    "SELECT sum(wicket_sum) as fielding_dismissals, count(distinct match_id) as match_count from base_data where \"wicket_fielder_id\"= '$fielder_id'\n",
     "\"\"\")\n",
     "additional_filters=''\n",
     "query = fielding_stats_template.substitute(\n",
@@ -177,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f226c83",
+   "id": "ff3cfe6a",
    "metadata": {},
    "outputs": [],
    "source": []
