added druid feature extractor

--- a/DruidConnectionTest.ipynb
+++ b/DruidConnectionTest.ipynb
@@ -3,184 +3,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70e86e9e",
+   "id": "ff3cfe6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydruid.db import connect\n",
+    "from pyspark.sql import SparkSession\n",
     "\n",
-    "conn = connect(host='localhost', port=8888, path='/druid/v2/sql/', scheme='http')\n",
-    "curs = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "fd6d5278",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "with base_data as (\n",
-      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20'  and bowler_id in ('495d42a5')\n",
-      "), dismissals as (\n",
-      "  select sum(\"is_wicket\") as dismissal_count from base_data WHERE \"wicket_player_id\" = 'ba607b88'\n",
-      ")\n",
-      "SELECT\n",
-      "  sum(\"batter_run_sum\")*100.0/sum(\"delivery_count\") as strike_rate,\n",
-      "  sum(\"batter_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
-      "from base_data\n",
-      "where \"batter_id\" = 'ba607b88'\n",
-      "\n",
-      "Row(strike_rate=110.0, average=33.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from string import Template\n",
-    "from typing import List\n",
-    "\n",
-    "batting_stats_template = Template(\"\"\"\n",
-    "with base_data as (\n",
-    "  select * from delivery_records WHERE __time > '$start_date' AND __time < '$end_date'  AND \"match_type\" = 'T20' $additional_filters\n",
-    "), dismissals as (\n",
-    "  select sum(\"is_wicket\") as dismissal_count from base_data WHERE \"wicket_player_id\" = '$batter_id'\n",
-    ")\n",
-    "SELECT\n",
-    "  sum(\"batter_run_sum\")*100.0/sum(\"delivery_count\") as strike_rate,\n",
-    "  sum(\"batter_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
-    "from base_data\n",
-    "where \"batter_id\" = '$batter_id'\n",
-    "\"\"\")\n",
-    "\n",
-    "\n",
-    "def get_venue_filter(venue_name:str):\n",
-    "    return 'venue_name=\\'%s\\''%venue_name\n",
-    "\n",
-    "def get_adversary_filter(bowler_ids: List[str]):\n",
-    "    return 'bowler_id in (%s)'% \",\".join(['\\'%s\\''%bowler_id for bowler_id in bowler_ids])\n",
-    "\n",
-    "venue = 'Eden Gardens'\n",
-    "additional_filters ='and ' + get_venue_filter(venue)\n",
-    "additional_filters = ' and ' +  get_adversary_filter(['495d42a5'])\n",
-    "query = batting_stats_template.substitute(\n",
-    "    start_date = '2017-01-01',\n",
-    "    end_date='2023-01-01',\n",
-    "    additional_filters=additional_filters,\n",
-    "    batter_id='ba607b88')\n",
-    "print(query)\n",
-    "\n",
-    "curs.execute(query)\n",
-    "for row in curs:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "c1578265",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "with base_data as (\n",
-      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20'  and batter_id in ('ba607b88')\n",
-      "), dismissals as (\n",
-      "  select sum(\"wicket_sum\") as dismissal_count from base_data WHERE \"bowler_id\" = '495d42a5'\n",
-      ")\n",
-      "SELECT\n",
-      "  sum(\"delivery_count\")*1.0/(SELECT sum(dismissal_count) from dismissals) as strike_rate,\n",
-      "  sum(\"total_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
-      "from base_data\n",
-      "where \"bowler_id\" = '495d42a5'\n",
-      "\n",
-      "Row(strike_rate=30.0, average=35.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "bowling_stats_template = Template(\"\"\"\n",
-    "with base_data as (\n",
-    "  select * from delivery_records WHERE __time > '$start_date' AND __time < '$end_date'  AND \"match_type\" = 'T20' $additional_filters\n",
-    "), dismissals as (\n",
-    "  select sum(\"wicket_sum\") as dismissal_count from base_data WHERE \"bowler_id\" = '$bowler_id'\n",
-    ")\n",
-    "SELECT\n",
-    "  sum(\"delivery_count\")*1.0/(SELECT sum(dismissal_count) from dismissals) as strike_rate,\n",
-    "  sum(\"total_run_sum\")*1.0/(SELECT sum(dismissal_count) from dismissals) as average\n",
-    "from base_data\n",
-    "where \"bowler_id\" = '$bowler_id'\n",
-    "\"\"\")\n",
-    "\n",
-    "\n",
-    "def get_venue_filter(venue_name:str):\n",
-    "    return 'venue_name=\\'%s\\''%venue_name\n",
-    "\n",
-    "def get_adversary_filter(batter_ids: List[str]):\n",
-    "    return 'batter_id in (%s)'% \",\".join(['\\'%s\\''%batter_id for batter_id in batter_ids])\n",
-    "\n",
-    "additional_filters = ' and ' +  get_adversary_filter(['ba607b88'])\n",
-    "query = bowling_stats_template.substitute(\n",
-    "    start_date = '2017-01-01',\n",
-    "    end_date='2023-01-01',\n",
-    "    additional_filters=additional_filters,\n",
-    "    bowler_id='495d42a5')\n",
-    "print(query)\n",
-    "curs.execute(query)\n",
-    "for row in curs:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "455364cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "with base_data as (\n",
-      "  select * from delivery_records WHERE __time > '2017-01-01' AND __time < '2023-01-01'  AND \"match_type\" = 'T20' \n",
-      ")\n",
-      "SELECT sum(wicket_sum) as fielding_dismissals, count(distinct match_id) as match_count from base_data where \"wicket_fielder_id\"= 'ba607b88'\n",
-      "\n",
-      "Row(fielding_dismissals=69, match_count=56)\n"
-     ]
-    }
-   ],
-   "source": [
-    "fielding_stats_template = Template(\"\"\"\n",
-    "with base_data as (\n",
-    "  select * from delivery_records WHERE __time > '$start_date' AND __time < '$end_date'  AND \"match_type\" = 'T20' $additional_filters\n",
-    ")\n",
-    "SELECT sum(wicket_sum) as fielding_dismissals, count(distinct match_id) as match_count from base_data where \"wicket_fielder_id\"= '$fielder_id'\n",
-    "\"\"\")\n",
-    "additional_filters=''\n",
-    "query = fielding_stats_template.substitute(\n",
-    "    start_date = '2017-01-01',\n",
-    "    end_date='2023-01-01',\n",
-    "    additional_filters=additional_filters,\n",
-    "    fielder_id='ba607b88')\n",
-    "print(query)\n",
-    "curs.execute(query)\n",
-    "for row in curs:\n",
-    "    print(row)"
+    "spark = SparkSession.builder.appName('SparkByExamples.com').config('spark.driver.bindAddress','localhost').config(\"spark.ui.port\",\"4050\").getOrCreate()\n",
+    "spark.read.parquet(\"processed_output/delivery_parquet\").registerTempTable(\"all_matches\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff3cfe6a",
+   "id": "a96b3eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_t20_match_id_query = \"\"\"\n",
+    "    with training_collection as (\n",
+    "        select distinct match_id from all_matches where dt>='2018-01-01' and match_type='T20' limit 1500\n",
+    "    ), base_data as (\n",
+    "        select * from all_matches where dt>='2018-01-01' and match_id in (select match_id from training_collection)\n",
+    "    ), player_ids as (\n",
+    "        select distinct match_id, dt, venue_name, batter_team as team, batter_id as player_id, batter_name as player_name from base_data where batter_id is not null\n",
+    "        union\n",
+    "        select distinct match_id, dt, venue_name, bowler_team as team, bowler_id as player_id, bowler_name as player_name from base_data where bowler_id is not null\n",
+    "        union\n",
+    "        select distinct match_id, dt, venue_name, batter_team as team, wicket_player_id as player_id, wicket_player_name as player_name from base_data where wicket_player_id is not null\n",
+    "        union\n",
+    "        select distinct match_id, dt, venue_name, bowler_team as team, wicket_fielder_id as player_id, wicket_fielder_name as player_name from base_data where wicket_fielder_id is not null\n",
+    "    )\n",
+    "    select distinct match_id, dt, venue_name, team, player_id, player_name from player_ids \n",
+    "\"\"\"\n",
+    "train_t20_match_ids = spark.sql(train_t20_match_id_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6ea2962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from etl.druid.stats_helper import prepare_player_match_for_training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d0a67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_rows = train_t20_match_ids.rdd.map(prepare_player_match_for_training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77caf84b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from etl.druid.training_record_schema import training_record_schema\n",
+    "df = spark.createDataFrame(training_rows.take(10), schema=training_record_schema)\n",
+    "df.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74ad2f3",
    "metadata": {},
    "outputs": [],
    "source": []
